# backtestd

./: .gitignore  Cargo.toml  README.org  deploy.sh  diesel.toml  diesel_schema.patch  docker-compose.yaml  gen.sh
config/: config.yaml  config_single.yaml  run.yaml  run_single.yaml
config/generate/: ash.yaml
config/generate/baseline/: ALF2_baseline.yaml  Adxvma_baseline.yaml  Corr_avg_baseline.yaml  GMA.yaml  QWMA_baseline.yaml  YMA.yaml  adxvma_baseline.yaml  alf2_baseline.yaml  amka_baseline.yaml  corr_avg_baseline.yaml  gma.yaml  plombiers.yaml  qwma_baseline.yaml  yma.yaml
config/generate/confirm/: ALF2.yaml  Adxvma.yaml  Aroon_Osci.yaml  Aroon_Osci_zero_line.yaml  COG.yaml  Corr_avg.yaml  Corr_momentum.yaml  Corr_momentum_orig_val.yaml  EO.yaml  QWMA.yaml  Velocity_norm.yaml  adxvma.yaml  alf2.yaml  amka.yaml  ao.yaml  aroon_osci.yaml  aroon_osci_zero_line.yaml  aroon_up_down.yaml  ash.yaml  chaikin.yaml  cog.yaml  corr_avg.yaml  corr_momentum.yaml  corr_momentum_orig_val.yaml  eo.yaml  iTrend.yaml  itrend.yaml  itrend_2lx.yaml  qwma.yaml  ssl.yaml  stc.yaml  velocity_norm.yaml
config/generate/exit/: rex.yaml  stc.yaml
config/generate/volume/: volatility_ratio.yaml  wae.yaml
config/indicator/: Ash.yaml  wae.yaml
config/indicator/baseline/: ALF2_baseline.yaml  Adxvma_baseline.yaml  Amka_baseline.yaml  Corr_avg_baseline.yaml  GMA.yaml  Plombiers.yaml  QWMA_baseline.yaml  YMA.yaml  adxvma_baseline.yaml  alf2_baseline.yaml  amka_baseline.yaml  corr_avg_baseline.yaml  gma.yaml  kijunsen.yaml  ma.yaml  plombiers.yaml  qwma_baseline.yaml  yma.yaml
config/indicator/confirm/: ALF2.yaml  AO.yaml  Amka.yaml  Aroon.yaml  Aroon_Osci.yaml  Aroon_Osci_Zero.yaml  Ash.yaml  COG.yaml  Chaikin.yaml  Corr_avg.yaml  (+42 more)
migrations/2019-12-17-172206_init_schema/: down.sql  up.sql
migrations/2020-03-24-124500_indicators/: down.sql  up.sql
migrations/2020-04-05-173735_results/: down.sql  up.sql
src/: backtest_runner.rs  db.rs  main.rs  params.rs  schema.rs  signal_generator.rs  xml_reader.rs
src/database/: expert_inputs.rs  indicator.rs  indicator_inputs_explicit.rs  indicator_set.rs  legacy_import.rs  mod.rs  result.rs  result_set.rs  run.rs  run_session.rs  schema.rs  schema.rs.rej  symbols.rs
src/params/: common_params.rs  indi_func.rs  indicator.rs  indicator_inputs.rs  indicator_set.rs  indicator_set_files.rs  legacy_indicator.rs  mod.rs  run_params.rs  run_params_file.rs  signal_class.rs  terminal_params.rs  to_param_string.rs  to_terminal_config.rs
src/results/: csv_writer.rs  mod.rs  xml_reader.rs
tests/: multicurrency.xml  report_AUDCAD.xml
(+7 files in other folders)
