[package]
name = "backtest-run"
version = "0.1.0"
authors = ["Stefan Lendl <ste.lendl@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1"
pretty_env_logger = "*"
log = "*"
clap = "2"

chrono = { version = "0.4", features = ["serde"] }

# actix-web = "1.0"
# tokio = "=0.2.0-alpha.6"

quick-xml = "0.17"
handlebars = "2"

serde = "*"
serde_json = "*"
serde_derive = "*"
serde_repr = "0.1"
serde_any = { version = "0.5", default-features = false, features = ["json", "yaml"] }

anyhow = "1"

diesel = { version = "1.4", features = ["postgres", "chrono", "serde_json"] }
dotenv = "0.15"

# heim = "0.0.8"
# heim-common = "0.0.8"
# heim-process = "0.0.8"
# heim-derive = "0.0.8"

futures = "0.3"
futures-executor = "0.3"
