[package]
name = "backtest-run"
version = "0.2.0"
authors = ["Stefan Lendl <ste.lendl@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4"
pretty_env_logger = "0.4"
# env_logger = "0.7"
log = "0.4"
clap = "2.33"

chrono = { version = "0.4", features = ["serde"] }

# actix-web = "1.0"
# tokio = "=0.2.0-alpha.6"

quick-xml = "0.17"
handlebars = "2.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_repr = "0.1"
serde_any = { version = "0.5", default-features = false, features = ["json", "yaml"] }

anyhow = "1.0"

# heim = "0.0.8"
# heim-common = "0.0.8"
# heim-process = "0.0.8"
# heim-derive = "0.0.8"

futures = "0.3"
futures-executor = "0.3"

actix-web = "2.0"
actix-web-actors = "2.0"
actix-codec = "0.2"
actix-files = "0.2"
actix-rt = "1.0"
awc = "1.0"
bytes = "0.5"

