[package]
name = "backtestd"
version = "0.3.1"
authors = ["Stefan Lendl <s@stfl.dev>"]
edition = "2018"

[dependencies]
lazy_static = "1.4"
pretty_env_logger = "0.4"
# env_logger = "0.7"
log = "0.4.11"
clap = "2.33.3"

chrono = { version = "0.4.15", features = ["serde"] }

# actix-web = "1.0"
# tokio = "=0.2.0-alpha.6"

quick-xml = { version = "0.18", features = [ "serialize" ] }
# handlebars = "2.0"

csv = "1.1"

serde = "1.0.116"
serde_json = "1.0.57"
serde_derive = "1.0.116"
serde_repr = "0.1.6"
serde_any = { version = "0.5", default-features = false, features = ["json", "yaml"] }

anyhow = "1.0.32"

bigdecimal = { version = "0.1", features = ["serde"] }
# num = { version = "0.2", features = ["bigint"]}
glob = "0.3"
derive_more = "0.99.10"

futures = "0.3"
futures-executor = "0.3"

actix-web = "2.0"
actix-web-actors = "2.0"
actix-codec = "0.2"
actix-files = "0.2.2"
actix-rt = "1.0"
awc = "1.0"
bytes = "0.5.6"

